- new event SCIP_EVENTTYPE_IMPLADDED
- new method SCIPgetLPI() which makes all methods in scip/lpi.h available to the user
- put block memory shell and tclique algorithm into separate subdirectories
- new parameter "duringlploop" of SCIPincludeHeur() - heuristics can now run during the price-and-cut loop at a node
- new methods SCIPgetRandomInt() and SCIPgetRandomReal()

plugins:
- added command "write solution" to default dialog
- changed restart dfs nodeselector to sort leaves by node number instead of node depth to aviod jumping around in the
  search tree after a restart was applied and the current dive ended due to infeasibility
- removed "objfeaspump" heuristic, because the functionality can be achieved by using the "feaspump" heuristic
- diving heuristics are now applying propagation after each bound change
- new primal heuristic "octane"
- slightly changed feaspump heuristic, s.t. after finding a new best solution the target integral solution is modified
  randomly
- new method SCIPgetDualfarkasLinear() of linear constraint handler
- new method SCIPgetDualfarkasLogicor() of logicor constraint handler
- new method SCIPgetDualfarkasSetppc() of setppc constraint handler
- new method SCIPgetDualsolKnapsack() of knapsack constraint handler
- new method SCIPgetDualfarkasKnapsack() of knapsack constraint handler
- new method SCIPgetDualsolVarbound() of varbound constraint handler
- new method SCIPgetDualfarkasVarbound() of varbound constraint handler
- new Message Handler plugin
- added commands "write problem" and "write transproblem" to default dialog
- modified probing presolver to not add implications that are already included in the implication graph and clique table

parameters:
- replaced parameter presolving/restartbdchgs with parameters presolving/maxrestarts and presolving/restartfac
- new parameter conflict/maxclauses
- new parameter conflict/allowlocal
- new parameter branching/fullstrong/reevalage