@@ -144,6 +144,11 @@ Here is what you have to do to get SCIP running:
    appropriate make/make.* file, or to compile with "make USRFLAGS=-DNO_RAND_R".
    Make sure, the file "src/scip/misc.c" is recompiled.
 
+   On some systems, the strtok_r() method is not available.
+   In this case, you have to either add "-DNO_STRTOK_R" to the FLAGS in the
+   appropriate make/make.* file, or to compile with "make USRFLAGS=-DNO_STRTOK_R".
+   Make sure, the file "src/scip/misc.c" is recompiled.
+
    If you encounter other compiler or linker errors, you should recompile with
    "make VERBOSE=true ..." in order to get the full compiler invocation. This might help to
    fix the corresponding machine dependent makefile in the make subdirectory.
