@@ -41,6 +41,7 @@ interface:
 - put block memory shell and tclique algorithm into separate subdirectories
 - new parameter "duringlploop" of SCIPincludeHeur() - heuristics can now run during the price-and-cut loop at a node
 - new methods SCIPgetRandomInt() and SCIPgetRandomReal()
+- new method SCIPstrtok()
 
 plugins:
 - added command "write solution" to default dialog
@@ -130,7 +131,7 @@ features:
 - improved preprocessing abort criteria
 - added flags READLINE=true/false, ZLIB=true/false, ZIMPL=true/false to Makefile
 - added possibility to disable certain features by using "make USRFLAGS=-DNO_REMOVE_HISTORY",
-  "make USRFLAGS=-DNO_SIGACTION", or "make USRFLAGS=-DNO_RAND_R"
+  "make USRFLAGS=-DNO_SIGACTION", "make USRFLAGS=-DNO_RAND_R", or "make USRFLAGS=-DNO_STRTOK_R"
 
 fixed bugs:
 - LP primal feasibility for bounds is now defined as absolute measure (was relative to the bound before);
